@@ -6,5 +6,7 @@ from .rule_engine import *
 def register():
     Pool.register(
         Plan,
+        PlanLines,
         RuleEngineRuntime,
+        RuleEngine,
         module='commission_insurance_rule_engine', type_='model')
