@@ -7,5 +7,21 @@
             <field name="name">plan_form</field>
             <field name="inherit" ref="commission.plan_view_form"/>
         </record>
+        <record model="ir.ui.view" id="plan_line_view_form">
+            <field name="model">commission.plan.line</field>
+            <field name="inherit" ref="commission.plan_line_view_form"/>
+            <field name="name">plan_line_form</field>
+        </record>
+        <record model="ir.ui.view" id="plan_line_view_list">
+            <field name="model">commission.plan.line</field>
+            <field name="inherit" ref="commission.plan_line_view_list"/>
+            <field name="name">plan_line_list</field>
+        </record>
+        <record model="ir.ui.view" id="plan_line_view_list_sequence">
+            <field name="model">commission.plan.line</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="commission.plan_line_view_list_sequence"/>
+            <field name="name">plan_line_list_sequence</field>
+        </record>
     </data>
 </tryton>
