@@ -1,0 +1,8 @@
+- *Paramétrage du montant de commissionement à partir du moteur de règle*:
+en selectionnant l'option 'utiliser le moteur de règle', il devient possible de
+paramétrer le montant de commissionnement avec toutes les fonctionnalités du
+moteur de règle.
+
+- *Règles de commissionnement prédéfinie*: ce module ajoute des règles de
+commissionnement pré-paramétrée : 'commission en escompte' et 'commission
+linéaire'
