@@ -6,9 +6,14 @@ Résumé
 
 .. include:: summary.rst
 
+Fonctionnalités
+---------------
+
+.. include:: features.rst
+
 
 .. toctree::
     :hidden:
 
     summary.rst
-
+    features.rst
