@@ -1,2 +1,6 @@
-Ce module permet de retrouver au niveau du moteur de règle l'information du
-plan de commissionnement utilisé au sein du contrat.
+Ce module permet de retrouver les fonctionnalités du moteur de règle pour
+paramétrer le commissionnement.
+
+- Paramétrage du montant de commissionement à partir du moteur de règle
+- Ajout d'une donnée metier permettant de retrouver le plan de commissionnement
+utilisé au sein d'un contrat.
