@@ -8,3 +8,4 @@ depends:
 xml:
     commission.xml
     rule_engine.xml
+    rule_template.xml
